[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "dagster-user-code"
version = "0.1.0"
description = "Dagster user-code image and Python package for Kubernetes execution"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
  { name = "Justin" },
]
dependencies = [
  "dagster==1.12.14",
  "dagster-k8s==0.28.14",
  "dagster-postgres==0.28.14",
  "dagster-dbt==0.28.14",
  "dagster-aws==0.28.14",
  "dagster-pyspark==0.28.14",
  "dbt-core>=1.8,<2.0",
  "dbt-spark>=1.8,<2.0",
  "great-expectations[s3,spark]>=1.15.1,<2.0",
  "pyspark",
  "delta-spark",
  "pyarrow>=23.0.1,<24",
  "pandas>=2.3.3,<3.0",
  "boto3>=1.34,<2.0",
  "s3fs>=2024.12.0,<2026.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2,<9",
]
lineage = [
  "openlineage-dagster>=1.30,<2.0",
]
notebooks = [
  "ipykernel>=6.31.0,<7",
  "jupyterlab>=4.5.6,<5",
]
local = [
  "duckdb>=1.5.1,<2.0",
  "polars>=1.39.3,<2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dagster_user_code"]

[tool.pytest.ini_options]
testpaths = ["tests"]
