[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "dagster-user-code"
version = "0.1.0"
description = "Dagster user-code image and Python package for Kubernetes execution"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [
  { name = "Justin" },
]
dependencies = [
  "dagster==1.12.20",
  "dagster-k8s==0.28.20",
  "dagster-postgres==0.28.20",
]

[project.optional-dependencies]
aws = [
  "dagster-aws==0.28.20",
  "boto3>=1.42.66,<2.0",
  "s3fs>=2026.2.0,<2027.0.0",
]
dbt = [
  "dagster-dbt==0.28.20",
  "dbt-core>=1.11.7,<1.12",
  "dbt-spark>=1.10.1,<1.11",
]
spark = [
  "dagster-pyspark==0.28.20",
  "pyspark>=4.1.1,<4.2",
  "delta-spark>=4.1.0,<4.2",
  "pyarrow>=23.0.1,<24",
  "pandas>=3.0.1,<4.0",
]
dev = [
  "pytest>=9.0.2,<10",
]
lineage = [
  "openlineage-dagster>=1.30,<2.0",
]
notebooks = [
  "ipykernel>=7.2.0,<8",
  "jupyterlab>=4.5.6,<5",
]
local = [
  "duckdb>=1.5.1,<2.0",
  "polars>=1.39.3,<2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dagster_user_code"]

[tool.pytest.ini_options]
testpaths = ["tests"]
