[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[project]
name = "dagster-user-code"
version = "0.3.0"
description = "Dagster user-code image and Python package for Kubernetes execution"
readme = "README.md"
requires-python = ">=3.14.4,<3.15"
license = { text = "MIT" }
authors = [
  { name = "Justin Trusty" },
]
dependencies = [
  "dagster==1.13.3",
  "dagster-dg-cli==1.13.3",
  "dagster-k8s==0.29.3",
  "dagster-postgres==0.29.3",
  "boto3>=1.42.62,<1.43",
  "packaging>=26.1,<27",
]

[project.optional-dependencies]
aws = [
  "dagster-aws==0.29.3",
  "s3fs>=2026.2.0,<2027.0.0",
]
dbt = [
  "dbt-core>=1.11.8,<1.12",
  "dbt-spark>=1.10.1,<1.11",
]
spark = [
  "dagster-pyspark==0.29.3",
  "pyspark>=4.1.1,<4.2",
  "grpcio-status>=1.80.0,<2",
  "zstandard>=0.25.0,<1",
  "delta-spark>=4.2.0,<4.3",
  "pyarrow>=24.0.0,<25",
  "pandas>=3.0.1,<4.0",
  "openbb>=4.7.1,<5.0.0",
  "yfinance>=1.3.0,<1.4",
]
dev = [
  "pytest>=9.0.2,<10",
]
lineage = [
  "dagster-openlineage>=0.1.0,<1.0",
]
notebooks = [
  "ipykernel>=7.2.0,<8",
  "jupyterlab>=4.5.6,<5",
]
local = [
  "duckdb>=1.5.1,<2.0",
  "polars>=1.39.3,<2.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2,<10",
  "pytest-cov>=7.1.0,<8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dagster_user_code"]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--cov=dagster_user_code",
  "--cov-report=term-missing:skip-covered",
  "--cov-fail-under=80",
]
testpaths = ["tests"]

[tool.uv]
default-groups = ["dev"]
environments = ["sys_platform == 'linux'"]
